--- a/3.html
+++ b/3.html
@@ -17,7 +17,7 @@
     <div>
       <h2 class = "ridi">JavaScript</h2>
       <P class = "ridi"><a href = "https://en.wikipedia.org/wiki/JavaScript" title = "JavaScript wikipedia" target = "_blank">JavaScript</a>(/ˈdʒɑːvəˌskrɪpt/), often abbreviated as JS, is a <strong>programming language</strong> that conforms to the ECMAScript specification.  JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.</P>
-      <img style = "margin-top : 45px; margin-bottom : 45px" src = "javascript.jpg" width = "100%">
+      <img style = "margin-top : 45px; margin-bottom : 45px" src = "javascript.jpg" width = "600px 400px">
       <p class = "ridi">Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it.</p>
     </div>
   </div>
