--- a/2.html
+++ b/2.html
@@ -25,7 +25,7 @@
     <div>
       <h2 class = "ridi">CSS</h2>
       <p class = "ridi"><a href = "https://en.wikipedia.org/wiki/CSS" title = "CSS wikipedia" target = "_blank">Cascading Style Sheets (CSS)</a> is a <strong>style sheet language</strong> used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
-      <img style = "margin-top : 45px; margin-bottom : 45px" src = "css.jpg" width = "100%">
+      <img style = "margin-top : 45px; margin-bottom : 45px" src = "css.jpg" width = "600px 400px">
       <p class = "ridi">CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts. This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file which reduces complexity and repetition in the structural content as well as enabling the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
     </div>
   </div>
