--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
       <h2 class = "ridi">Welcome</h2>
       <p class = "ridi">The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as <a href ="https://example.com/" title = "Don't surprise! This is just EXAMPLE SITE!">https://example.com/</a>), which may be interlinked by hypertext, and are accessible over the Internet. The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by a software application called a web browser, and are published by a software application called a web server. The World Wide Web is not synonymous with the Internet, which pre-existed the Web in some form by over two decades and upon whose technologies the Web is built.</P>
-      <img style = "margin-top : 45px; margin-bottom : 45px" src = "web.jpg" width = "100%">
+      <img style = "margin-top : 45px; margin-bottom : 45px" src = "web.jpg" width = "600px 400px">
       <P class = "ridi">English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser in 1990 while employed at CERN near Geneva, Switzerland. The browser was released outside CERN to other research institutions starting in January 1991, and then to the general public in August 1991. The World Wide Web has been central to the development of the Information Age, and is the primary tool billions of people use to interact on the Internet.</p>
     </div>
   </div>
