--- a/3.html
+++ b/3.html
@@ -1,18 +1,52 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB3 - JavaScript</title>
+  <title>WEB2 - JavaScript</title>
   <meta charset = "utf-8">
   <link rel="stylesheet" href="style.css">
+  <script>
+    function nightDayHandler(self){
+        var target = document.querySelector('body');
+        if(self.value === 'night'){
+          target.style.backgroundColor = 'black';
+          target.style.color = 'white';
+          self.value = 'day';
+
+          var alist = document.querySelectorAll('a');
+          var i = 0;
+          while(i < alist.length) {
+          alist[i].style.color = 'powderblue';
+          i = i + 1;
+          }
+
+
+        } else {
+          target.style.backgroundColor = 'white';
+          target.style.color = 'black';
+          self.value = 'night';
+
+          var alist = document.querySelectorAll('a');
+          var i = 0;
+          while(i < alist.length) {
+          alist[i].style.color = 'green';
+          i = i + 1;
+          }
+        }
+      }
+  </script>
 </head>
 
 <body>
   <h1 class = "ridi"><a href = "index.html">WEB</a></h1>
+
+  <input type = "button" value = "night" onclick="
+    nightDayHandler(this);
+  ">
   <div id = "grid">
     <ol>
       <li class = "ridi"><a href = "1.html">HTML</a></li>
       <li class = "ridi"><a href = "2.html">CSS</a></li>
-      <li class = "ridi"><a href = "3.html" style = "color : purple">JavaScript</a></li>
+      <li class = "ridi"><a href = "3.html">JavaScript</a></li>
     </ol>
     <div>
       <h2 class = "ridi">JavaScript</h2>
@@ -21,5 +55,8 @@
       <p class = "ridi">Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it.</p>
     </div>
   </div>
+  <input type = "button" value = "night" onclick="
+    nightDayHandler(this);
+  ">
 </body>
 </html>
